:package:Conhecimentos e projetos adicionados

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
         </header>
 
-        <div class="sidebar">
+        <aside class="sidebar">
             <nav>
                 <ul class="menu">
                     <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
@@ -47,7 +47,114 @@
                 <a href="#"><i id="gitimg" class="fab fa-github"></i></a>
                 <a href="#"><i class="fab fa-linkedin"></i></a>
             </div>
-        </div>
+        </aside>
+
+        <section class="sessao-conhecimentos" id="conhecimentos">
+            <div class="sessao-header">
+              <h1>Conhecimentos</h1>
+            </div>
+            <div class="conhecimentos">
+              <div class="conhecimento">
+                <div class="conhecimento-header">
+                  <i class="fab fa-html5"></i>
+                  <h3>HTML</h3>
+                </div>
+                <div class="conhecimento-text">
+                  <p>Estudando HTML5 através das plataformas online: RECODE e Curso em vídeo (YouTube). Atualmente possuo conhecimento básico desta tecnologia.</p>
+                </div>
+              </div>
+              <div class="conhecimento">
+                <div class="conhecimento-header">
+                  <i class="fab fa-css3-alt"></i>
+                  <h3>CSS</h3>
+                </div>
+                <div class="conhecimento-text">
+                  <p>Estudando CSS3 através das plataformas online: RECODE e Curso em vídeo. Atualmente possuo conhecimento básico desta tecnologia.</p>
+                </div>
+              </div>
+              <div class="conhecimento">
+                <div class="conhecimento-header">
+                  <i class="fas fa-pencil-alt"></i>
+                  <h3>UX & UI</h3>
+                </div>
+                <div class="conhecimento-text">
+                  <p>Estudando UX & UI através das plataformas online: Alura e Fiap. Atualmente possuo conhecimento básico desta tecnologia.</p>
+                </div>
+              </div>
+              <div class="conhecimento">
+                <div class="conhecimento-header">
+                  <i class="fab fa-js"></i>
+                  <h3>Javascript</h3>
+                </div>
+                <div class="conhecimento-text">
+                  <p>Estudando JavaScript através das plataformas online: RECODE, Alura e Fundação Bradesco. Atualmente possuo conhecimento básico desta tecnologia.</p>
+                </div>
+              </div>
+              <div class="conhecimento">
+                <div class="conhecimento-header">
+                  <i class="fab fa-bootstrap"></i>
+                  <h3>Boostrap</h3>
+                </div>
+                <div class="conhecimento-text">
+                  <p>Estudando Bootstrap através das plataformas online: Alura e RECODE. Atualmente possuo conhecimento básico desta tecnologia.</p>
+                </div>
+              </div>
+              <div class="conhecimento">
+                <div class="conhecimento-header">
+                  <i class="fab fa-github"></i>
+                  <h3>Git e GitHub</h3>
+                </div>
+                <div class="conhecimento-text">
+                  <p>Estudando Git e GitHub através das plataformas online: Alura e RECODE. Atualmente possuo conhecimento básico desta tecnologia.</p>
+                </div>
+              </div>
+              <div class="conhecimentos-img-wrapper">
+                <img src="imagens/conhecimento.png" alt="imagem conhecimento">
+              </div>
+            </div>
+          </section>
+
+          <div class="sessao-projetos" id="projetos">
+            <div class="sessao-header">
+              <h1>Projetos</h1>
+            </div>
+            <div class="projetos">
+              <div class="card">
+                <div class="card-img-wrapper">
+                  <img src="imagens/proj.png" alt="imagem do projeto ToDo" />
+                </div>
+                <div class="card-info">
+                  <h2>ToDo List</h2>
+                  <h3>Javascript</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ducimus vero maxime amet magnam doloribus eos consequatur expedita architecto hic?</p>
+                  <button class="btn">Saiba Mais</button>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-img-wrapper">
+                  <img src="imagens/proj.png" alt="imagem do projeto Maratona" />
+                </div>
+                <div class="card-info">
+                  <h2>Maratona</h2>
+                  <h3>HTML, CSS</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, vero aliquam? Pariatur libero voluptas ipsam ullam consectetur ab facilis cumque.</p>
+                  <button class="btn">Saiba Mais</button>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-img-wrapper">
+                  <img src="imagens/proj.png" alt="imagem do projeto Casa Bela" />
+                </div>
+                <div class="card-info">
+                  <h2>Casa Bela</h2>
+                  <h3>HTML</h3>
+                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est pariatur soluta doloremque tempore nisi placeat, eveniet voluptate recusandae. Eius, sapiente?</p>
+                  <button class="btn">Saiba Mais</button>
+                </div>
+              </div>
+            </div>
+
+          </section>
 
     </div>
     
