:package: sessao-contato adicionada

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                   <img src="imagens/proj.png" alt="imagem do projeto ToDo" />
                 </div>
                 <div class="card-info">
-                  <h2>ToDo List</h2>
+                  <h2>PortFlix</h2>
                   <h3>Javascript</h3>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ducimus vero maxime amet magnam doloribus eos consequatur expedita architecto hic?</p>
                   <button class="btn">Saiba Mais</button>
@@ -135,7 +135,7 @@
                   <img src="imagens/proj.png" alt="imagem do projeto Maratona" />
                 </div>
                 <div class="card-info">
-                  <h2>Maratona</h2>
+                  <h2>Ateliê - Costura</h2>
                   <h3>HTML, CSS</h3>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, vero aliquam? Pariatur libero voluptas ipsam ullam consectetur ab facilis cumque.</p>
                   <button class="btn">Saiba Mais</button>
@@ -146,8 +146,8 @@
                   <img src="imagens/proj.png" alt="imagem do projeto Casa Bela" />
                 </div>
                 <div class="card-info">
-                  <h2>Casa Bela</h2>
-                  <h3>HTML</h3>
+                  <h2>Games</h2>
+                  <h3>HTML, CSS</h3>
                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est pariatur soluta doloremque tempore nisi placeat, eveniet voluptate recusandae. Eius, sapiente?</p>
                   <button class="btn">Saiba Mais</button>
                 </div>
@@ -155,6 +155,33 @@
             </div>
 
           </section>
+
+          <!-- Formulário de contato e cadastro --> 
+          <section class="sessao-contato">
+            <div class="contato-wrapper">
+              <div class="contato-left"></div>
+              <div class="contato-right">
+                <h1>Contato</h1>
+                <form action=''>
+                  <div class="input-group">
+                    <input type="text" class="field" id="nome" required>
+                    <label for="nome" class="field-label">Nome</label>
+                  </div>
+                  <div class="input-group">
+                    <input type="text" class="field" id="email" required>
+                    <label for="email" class="field-label">E-mail</label>
+                  </div>
+                  <div class="input-group">
+                    <textarea class="field" id="mensagem" required></textarea>
+                    <label for="mensagem" class="field-label">Mensagem</label>
+                  </div>
+                  <button type="submit" class="btn btn-submit">Enviar</button>
+                </form>
+              </div>
+            </div>
+
+          </section>
+
 
     </div>
     
