:package: finalizando readme

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <span>Fechar</span>
         </div>
 
-        <header>
+        <header id="home">
             <div class="img-wrapper">
                 <img src="imagens/bg.jpg" alt="">
             </div>
@@ -36,16 +36,15 @@
         <aside class="sidebar">
             <nav>
                 <ul class="menu">
-                    <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Conhecimentos</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Projetos</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Orçamento</a></li>
+                    <li class="menu-item"><a href="#home" class="menu-link">Home</a></li>
+                    <li class="menu-item"><a href="#conhecimentos" class="menu-link">Conhecimentos</a></li>
+                    <li class="menu-item"><a href="#projetos" class="menu-link">Projetos</a></li>
+                    <li class="menu-item"><a href="#contato" class="menu-link">Contato</a></li>
                 </ul>
             </nav>
             <div class="social-media">
-                <a href="#"><i id="gitimg" class="fab fa-github"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/Lucas-A-Mello"><i id="gitimg" class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/lucas-mello-300733222/"><i class="fab fa-linkedin"></i></a>
             </div>
         </aside>
 
@@ -157,7 +156,7 @@
           </section>
 
           <!-- Formulário de contato e cadastro --> 
-          <section class="sessao-contato">
+          <section class="sessao-contato" id="contato">
             <div class="contato-wrapper">
               <div class="contato-left"></div>
               <div class="contato-right">
@@ -182,7 +181,23 @@
 
           </section>
 
+          <footer>
+            <div class="footer-content">
+              <p>
+                Copyright &copy; 2021, ETECIA DS - Todos os direitos reservados
+              </p>
+              <ul>
+                <div class="social-list">
+                  <li><a href="https://www.linkedin.com/in/lucas-mello-300733222/"><i class="fab fa-linkedin"></i></a></li>
+                  <li><a href="https://github.com/Lucas-A-Mello"><i class="fab fa-github"></i></a></li>
+              </ul>
+              </div>
+            </div>
 
+          </footer>
+          <a href="#home" id="link-topo">
+            <i class="fas fa-arrow-up"></i>
+          </a>
     </div>
     
 </body>
